--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
-
+    app:startDestination="@+id/nav_cargar">
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.parcialmoyanoignacio.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
-
+        android:id="@+id/nav_cargar"
+        android:name="com.example.parcialmoyanoignacio.ui.cargar.CargarFragment"
+        android:label="Cargar auto"
+        tools:layout="@layout/fragment_cargar" />
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.parcialmoyanoignacio.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
+        android:id="@+id/nav_listar"
+        android:name="com.example.parcialmoyanoignacio.ui.listar.ListarFragment"
+        android:label="Lista de autos"
+        tools:layout="@layout/fragment_listar" />
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.parcialmoyanoignacio.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_salir"
+        android:name="com.example.parcialmoyanoignacio.ui.salir.SalirFragment"
+        android:label="Salir de la aplicación"
+        tools:layout="@layout/fragment_salir" />
 </navigation>
